--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "mongoose": "^4.8.5"
+  },
+  "devDependencies": {
+    "dotenv": "^4.0.0"
   }
 }
